# city_geh_ml

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
citygml-core/: Cargo.toml
citygml-core/src/: from_gml.rs  gml_geometry.rs  lib.rs  namespace.rs
citygml-gen/: Cargo.toml
citygml-gen/src/: cli.rs  main.rs
citygml-gen/src/codegen/: datatype_gen.rs  enum_gen.rs  enum_gen_dispatch.rs  external_types.rs  from_gml_gen.rs  mapper.rs  mod.rs  module_writer.rs  prelude.rs  struct_gen.rs  trait_gen.rs
citygml-gen/src/ir/: model.rs  types.rs
citygml-gen/src/resolve/: mod.rs  resolver.rs
citygml-gen/src/xmi/: mod.rs  parser.rs  raw.rs
citygml-io/: Cargo.toml
citygml-io/src/: boundary_accessors.rs  city_model.rs  error.rs  geometry.rs  gml_geometry.rs  gml_reader.rs  lib.rs  primitives.rs
citygml-io/tests/: geometry.rs  read_building.rs
citygml-types/: Cargo.toml
citygml-types/src/: appearance.rs  bridge.rs  building.rs  city_furniture.rs  city_object_group.rs  construction.rs  core.rs  dispatchers.rs  dynamizer.rs  generics.rs  land_use.rs  lib.rs  point_cloud.rs  relief.rs  transportation.rs  tunnel.rs  vegetation.rs  versioning.rs  water_body.rs
docs/: standalone-crate-plan.md  xsd-migration-plan.md
src/: cli.rs  error.rs  main.rs
src/codegen/: datatype_gen.rs  enum_gen.rs  external_types.rs  mapper.rs  mod.rs  module_writer.rs  prelude.rs  struct_gen.rs  trait_gen.rs
src/ir/: types.rs
src/resolve/: topology.rs
src/util/: naming.rs
src/xmi/: parser.rs  reader.rs
