[package]
name = "city_geh_ml"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "citygml-gen"
path = "src/main.rs"

[dependencies]
quick-xml = { version = "0.37", features = ["encoding"] }
encoding_rs = "0.8"
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1"
quote = "1"
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
indexmap = "2"
thiserror = "2"
anyhow = "1"
